--- a/home/template/homepage.html
+++ b/home/template/homepage.html
@@ -6,11 +6,11 @@
         body{
             font-family: Arial, sans-serif;
             margin: 0;
-            background_color: lightgray;
+            background-color: #f4f4f4;
             color: black;
         }
         header{
-            background_color: royalblue;
+            background-color: #0077cc;
             color: white;
             padding: 20px 0;
             text-align: center;
@@ -26,12 +26,12 @@
         footer{
             text-align: center;
             padding: 15px;
-            background_color: black;
-            color: lightgray; 
+            background_color: #222;
+            color: $ddd; 
         }
         a.button{
             display: inline-block;
-            background_color: seagreen;
+            background-color: #28a745;
             color: white;
             padding: 10px 20px;
             border-radius: 4px;
@@ -39,7 +39,7 @@
             margin-top: 15px;
         }
         a.button:hover{
-            background_color: darkgreen;
+            background-color: #218838;
         }
 
     </style>
@@ -52,7 +52,7 @@
 
     <main>
         <p> This is a responsive Homepage</p>
-        <a href="#" class="button"> </a>
+        <a href="#" class="button"> Learn More </a>
     </main>
 
     <footer>
