--- a/home/template/homepage.html
+++ b/home/template/homepage.html
@@ -27,7 +27,7 @@
             text-align: center;
             padding: 15px;
             background_color: #222;
-            color: $ddd; 
+            color: #ddd; 
         }
         a.button{
             display: inline-block;
@@ -60,4 +60,5 @@
     </footer>
 
 </body>
+
 </html>
