--- a/home/template/404.html
+++ b/home/template/404.html
@@ -3,11 +3,47 @@
     <head>
         <meta charset="utf-8">
         <title> Page not found </title>
-    <script>
+    <style>
         body{
-            
+            font-family: Arial, sans-serif;
+            background-color: #d3d3d3;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            color: #000000;
         }
-    </script>
+        .container{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        h1{
+            font-size: 80px;
+            color: #dc143c;
+            margin: 0;
+        }
+        h2{
+            font-size: 24px;
+            color: #696969;
+        }
+        p{
+            font-size: 16px;
+            margin: 20px 0;
+        }
+        a{
+            display: inline-block;
+            background-color: #2e8b57;
+            color: #ffffff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 4px;
+        }
+        a:hover{
+            background-color: #006400;
+        }
+    </style>
     </head>
 
 <body>
