--- a/home/template/about_us.html
+++ b/home/template/about_us.html
@@ -9,5 +9,30 @@
 </head>
 <body>
     
+    <div class="header">
+        <h1>Our Story</h1>
+        <p>Bringing flavours to life since 2025</p>
+        <nav>
+            <a href="/">Home</a>
+        </nav>
+    </div>
+
+<main class="about-container">
+    <h2>About our Restaurant</h2>
+    <p>Welcome to FlavourTown where passion meets the plate!.
+        We believe in using freshest ingredients to create delicious and memorable dishes.
+        From our cozy ambiance to our friendly service, we strive to give every customer an unforgettable dining experinece.
+    </p>
+    
+    <div class="about-image">
+        <img src="https://via.placeholder.com/700x300" alt="Restaurant Image">
+    </div>
+
+</main>
+
+    <div class="footer">
+        &copy; 2025 Restaurant Management. All Rights Reserved
+    </div>
+
 </body>
 </html>
