--- a/home/template/homepage.html
+++ b/home/template/homepage.html
@@ -6,7 +6,8 @@
     
 <body style="font-family: Arial, sans-serif;
             margin: 0;
-            background-color: #f8f8f8;">
+            background-color: #f8f8f8;
+            color: #333">
        
     <!-- header -->
 
