--- a/home/template/contact_us.html
+++ b/home/template/contact_us.html
@@ -9,6 +9,9 @@
 <body>
     <div class="header">
         <h1> Contact Us </h1>
+        <nav>
+            <a href="/"> Home </a>
+        </nav>
     </div>
     
 </body>
