--- a/home/template/contact_us.html
+++ b/home/template/contact_us.html
@@ -13,6 +13,11 @@
             <a href="/"> Home </a>
         </nav>
     </div>
+
+    <div class="container">
+        <h2> We'd love to hear from you! </h2>
+        
+    </div>
     
 </body>
 </html>
