--- a/home/template/contact_us.html
+++ b/home/template/contact_us.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <h2> We'd love to hear from you! </h2>
-        
+        <p> Restaurant Name: </p>
     </div>
     
 </body>
