--- a/home/template/contact_us.html
+++ b/home/template/contact_us.html
@@ -16,7 +16,14 @@
 
     <div class="container">
         <h2> We'd love to hear from you! </h2>
-        <p> Restaurant Name: </p>
+        <p><strong> Restaurant Name:</strong> Flavour Town</p>
+        <p><strong> Address:</strong> 123 Main Street, Kochi, Kerala </p>
+        <p><strong> Phone:</strong> +91 9447837670</p>
+        <p><strong> Email:</strong> contact@flavourtown.com</p>
+
+        <h3>Opening Hours</h3>
+        <p> Monday - Saturday: 10Am - 10Pm</p>
+        <p> Sunday: 12Pm - 8Pm</p>
     </div>
     
 </body>
