--- a/home/template/contact_us.html
+++ b/home/template/contact_us.html
@@ -25,6 +25,10 @@
         <p> Monday - Saturday: 10Am - 10Pm</p>
         <p> Sunday: 12Pm - 8Pm</p>
     </div>
+
+    <div class="footer">
+        &copy; 2025 Restaurant Management. All Right Reserved
+    </div>
     
 </body>
 </html>
